src/app/categories/styles/_liste.scss
.categories-head {
    text-transform: uppercase;
    white-space: nowrap;
    padding: 10px 0 5px 0;
    .categories-title,
    .categories-all-check,
    .categories-filters-close,
    .categories-close {
        display: inline-block;
    }
    .categories-title {
        width: 90px;
        text-align: center;
        cursor: pointer;
        @media (max-width: 540px) {
            width: 55px;
        }
    }

    .categories-all-check {
        position: relative;
        left: 4px;
        display: none;

        .fa-check {
            display: none;
        }
        &.checked .fa-check {
            display: block;
            opacity: .4;
        }
        &.full .fa-check {
            opacity: 1;
        }
    }

    .categories-filters-close,
    .categories-close {
        width: 130px;
        position: relative;
        z-index: 13;
        @media (max-width: 540px) {
            width: 125px;
        }
    }

    .categories-filters-close {
        visibility: hidden;
        padding-left: .7em;
        .stripe {
            display: inline-block;
            vertical-align: top;
            svg {
                display: inline-block;
                vertical-align: top;
                fill: #fff;
                width: 7px;
                transform: rotate(180deg);
            }
        }
    }

    .categories-close {
        text-align: right;
        .cross {
            display: inline-block;
            vertical-align: top;
            svg {
                display: inline-block;
                vertical-align: top;
                fill: #fff;
                width: 11px;
                transform: rotate(180deg);
            }
        }
    }
    button {
        border: none;
        background-color: transparent;
        text-transform: uppercase;
        margin: 0;
        padding: 0;
    }
}

.categories {
    list-style: none;
    padding: 0;
    margin: 0;
    height: 100%;
    width: 100%;
    position: relative;

    white-space: nowrap;
    overflow: hidden;

    background-color: #3a3a3a;

    transition: width 150ms ease;

    &.extend {
        width: 365px;
        @media (max-width: 540px) {
            width: 320px;
        }
    }

    &.extend:not(.filtering) {
        @each $category in $categories {
            .category-#{nth($category, 1)} {
                background-color: rgba(nth($category, 2), .5);
            }
        }
    }
    transition-delay: 150ms;
    &.extend.filtering {
        @each $category in $categories {
            .open.category-#{nth($category, 1)} {
                background-color: rgba(nth($category, 2), .5);
            }
        }
        .categories-filters-close {
            visibility: visible;
        }
        .open .category-filters {
            right: 0;
        }
    }


    .category-icon,
    .category-title,
    .category-filters-link {
        display: inline-block;
        vertical-align: top;
        height: 50px;
    }

    .active {
        .category-icon,
        .category-title {
            opacity: 1;
        }
    }

    .category-icon {
        opacity: .3;
        width: 90px;
        padding: 3px 0;
        @media (max-width: 540px) {
            width: 55px;
            padding: 6px 3px 6px 0;
        }
        text-align: center;

        .circle {
            display: inline-block;
            width: 44px;
            height: 44px;
            line-height: 44px;
            @media (max-width: 540px) {
                width: 38px;
                height: 38px;
                line-height: 38px;
            }
            border-radius: 50%;
            background-color: currentColor;
            position: relative;

            img, svg {
                fill: #fff;
                position: absolute;
                max-width: 100%;
                max-height: 100%;
                top: 50%;
                left: 50%;
                transform: translate(-50%, -50%);
            }

        }
    }
    @each $category in $categories {
        .category-#{nth($category, 1)} {
            .category-icon .circle {
                background-color: nth($category, 2);
            }
        }
    }

    .category-title {
        cursor: pointer;
        opacity: .5;
        width: 235px;
        overflow: hidden;
        line-height: 50px;
        padding-left: 0.25rem;
        white-space: nowrap;
    }

    .category-title-checkbox {
        vertical-align: middle;
    }

    .category-title-text {
        display: inline-block;
        vertical-align: middle;
        text-transform: uppercase;
        line-height: 1.2;
        white-space: normal;
        max-width: 200px;
    }

    .category-filters-link {
        border: none;
        margin: 0;
        padding: 0;
        width: 40px;
        @media (max-width: 540px) {
            width: 30px;
        }
        transition: all 100ms ease;
        &:hover {
            margin-left: -5px;
            width: 45px;
        }
        .stripe {
            display: inline-block;
            svg {
                display: inline-block;
                vertical-align: middle;
                fill: #fff;
            }
        }
    }
    @each $category in $categories {
        .category-#{nth($category, 1)} {
            .category-filters-link {
                background-color: nth($category, 2);
            }
        }
    }

    .category {
        width: 100%;
        min-height: 0;
        margin-bottom: 1px;
        flex-direction: column;

        transition: background-color 150ms ease;

        &.active {
            a {
                color: white;
                svg {
                    fill: white !important;
                }
            }
        }

        .menu-header {
            width: 100%;
            height: 51px;
        }

        .category-name {
            font-weight: bold;
            text-transform: uppercase;
            cursor: pointer;
            padding: 1em .5em;
            height: 50px;
            i {
                font-size: 1.2em;
            }
            span {
                vertical-align: middle;
            }
        }

        .category-filter {
            // padding-left: 20px;
        }

        .more-or-less {
            height: 20px;
            width: 20px;
            margin-right: 0.5rem;
            float: right;
            display: inline-block;
            position: relative;
            vertical-align: middle;
            .bar {
                width: 10px;
                height: 2px;
                background: white;
                position: absolute;
                top: 50%;
                left: 0;
                margin-top: -1px;
                transition: all 0.2s ease-out;
                &:first-child {
                    transform: rotate(90deg);
                }
            }
        }

        .filter-title {
            cursor: pointer;
            padding: .35em .1em .10em 1.75em;
            background-color: rgba(0, 0, 0, .15);
            margin-right: 10px;
            margin-left: 10px;
            > span:first-child {
                font-weight: bolder;
            }
        }

        .slider {
            .slider-container {
                padding: .5em 2em 1.75em;
            }
            label {
                margin-top: 0.4em;
                font-size: 0.8em;
                font-weight: 300;
            }
            .min-label {
                float: left;
            }
            .max-label {
                float: right;
            }
        }

        rzslider {
            margin: 15px 0 15px 0;
            span.rz-bar {
                background: transparentize(white, 0.5);
                height: 5px;
                .rz-selection {
                    background: white;
                }
            }

            span.rz-pointer {
                background-color: rgba(255, 255, 255, .3);
                &:after {
                    background-color: rgba(0, 0, 0, .85);
                }
                &.rz-active {
                    background-color: rgba(255, 255, 255, .7);
                    &:after {
                        background-color: black;
                    }
                }
            }

            span.rz-bubble {
                display: none;
            }
        }

        .choices {
            width: 100%;
            overflow: hidden;
            padding: .35em 0 .75em;
            z-index: 11;
            .form-group {
                margin: 0;
                position: relative;
                input[type="checkbox"], input[type="radio"] {
                    display: block;
                    position: absolute;
                    cursor: pointer;
                    color: white;
                    opacity: 0;
                    top: 0;
                    left: 0;
                    height: 100%;
                    width: 100%;
                    margin: 0;
                    z-index: 11;
                    &:focus {
                        outline: none;
                        outline-color: transparent;
                        outline-style: none;
                        box-shadow: 0px 1px 2px 0px $dark-grey;
                    }
                }
                label {
                    margin: 0;
                    width: 100%;
                    padding: .35em 1em .35em 2em;
                    font-size: 0.8rem;
                    line-height: 0.8rem;
                    font-weight: normal;
                    span {
                        vertical-align: middle;
                    }
                }
                .date-picker {
                    color: $dark-grey;
                    input {
                        width: 100%;
                        padding: 0 10px;
                    }
                    input[type='date']::-webkit-calendar-picker-indicator {
                        display: none;
                        -webkit-appearance: none;
                    }
                    .input-group-addon {
                        cursor: pointer;
                    }
                    table {
                        margin: auto;
                    }
                }
            }
        }
    }

    @each $category in $categories {
        .category-#{nth($category, 1)} {
            .category-filters {
                background-color: nth($category, 2);
            }
        }
    }
}

.category-filters {
    // opacity: 0;

    color: white;
    padding-top: 34px;
    position: absolute;
    top: 0;
    right: -300px;
    width: 278px;
    @media (max-width: 540px) {
        width: 265px;
    }
    height: 100%;
    overflow-y: auto;
    z-index: 12;
    transition: opacity 0.3s ease-out,
                right 250ms ease-out;

    form {
        width: 100%;
        height: 100%;
        padding: 0;
        position: relative;
        &:before {
            content: "";
            display: block;
            background-color: rgba(0, 0, 0, .6);
            height: 1px;
            position: absolute;
            top: 0;
            right: 10px;
            left: 10px;
        }
    }
    .selector {
        margin: 0;
        width: 100%;
        position: relative;
        transition: all 0.1s ease-out;
        position: relative;
        &.empty {
            display: none;
        }
        & > span {
            display: block;
            padding: 1em;
            cursor: pointer;
        }
        &:hover, &:focus {
            // transition-delay: 0.4s;
        }
    }
    .opened .more-or-less .bar:first-child {
        transform: rotate(180deg);
    }
}

